# amp

./: .gitmodules  CMakeLists.txt  imgui.ini  main.cpp
include/app/: Window.hpp
include/core/: GLBuffer.hpp  GLFramebuffer.hpp  GLShader.hpp  LoadTexture.hpp
include/engine/: AudioEngine.hpp  AudioEngineManager.hpp  Mesh.hpp  Model.hpp
include/engine/implementation/: Jack.hpp
include/ui/: FileDialog.hpp  IconsFontAwesome6.hpp  ImGuiTheme.hpp  SplashScreen.hpp  UI.hpp
shaders/: Basic.fs  Basic.vs
src/: main.cpp
src/app/: Window.cpp
src/core/: GLBuffer.cpp  GLFramebuffer.cpp  GLShader.cpp  LoadTexture.cpp
src/engine/: AudioEngineManager.cpp  Mesh.cpp  Model.cpp
src/engine/implementation/: Jack.cpp
src/ui/: FileDialog.cpp  ImGuiTheme.cpp  SplashScreen.cpp
